[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Player/HookPoint.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/HookChain.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GraplingHook.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.5

[node name="GraplingHook" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="Chain" type="Sprite" parent="."]
position = Vector2( 1, 5 )
z_index = 1
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 5, 50 )

[node name="Tip" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 9

[node name="Hook" type="Sprite" parent="Tip"]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tip"]
position = Vector2( 3.5, 3 )
shape = SubResource( 1 )

[node name="HookTween" type="Tween" parent="."]

[node name="NoiseDelay" type="Timer" parent="."]

[connection signal="timeout" from="NoiseDelay" to="." method="NoiseStep"]
